--- a/requirements.txt
+++ b/requirements.txt
@@ -6,11 +6,13 @@ Django==5.1.2
 django-appconf==1.0.6
 django-cors-headers==4.5.0
 django-filter==24.3
+django-jazzmin==3.0.1
 django-staticfiles==1.2.1
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 drf-spectacular==0.27.2
 drf-yasg==1.21.7
+gunicorn==23.0.0
 idna==3.10
 inflection==0.5.1
 jsonschema==4.23.0
@@ -18,6 +20,8 @@ jsonschema-specifications==2024.10.1
 packaging==24.1
 pillow==10.4.0
 postgres==4.0
+psycopg2-binary==2.9.9
+psycopg2-pool==1.2
 PyJWT==2.9.0
 python-dotenv==1.0.1
 pytz==2024.2
